--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: url("pictures/cactus5.jpg") no-repeat center center fixed;
+  background: url("pictures/1.jpg") no-repeat center center fixed;
   background-size: cover;
   height: 100%;
   overflow: hidden;
@@ -24,17 +24,19 @@ ul {
     }
 .box {
   overflow: scroll;
-  background-color: rgba(255,255,255,0.9);
-  max-width: 1140px;
+  background-color: rgba(255,255,255,0.8);
+  max-width: 1200px;
   margin: 0 auto;
-  height: 590px;
+  height: 640px;
   border: 5px solid white;
-  margin-top: 6%;
+  margin-top: 3%;
   }
 p {
   font-family: Courier;
   text-align: center;
-  padding-top: 5px;
+  padding-top: 20px;
+  max-width: 1050px;
+  margin: 0 auto;
   }
 .buttons {
   display: inline;
@@ -55,5 +57,17 @@ p {
   margin: 0 auto;
   max-height: 250px;
   max-width: 1050px;
-  padding-top: 5px;
+  padding-top: 10px;
+}
+.card {
+  border: 5px solid white;
+}
+h4 {
+  color: black;
+  font-family: Courier;
+  text-align: center;
+}
+.card-deck {
+  max-width: 1100px;
+  margin: 20px auto;
 }
