--- a/style.css
+++ b/style.css
@@ -38,10 +38,10 @@ p {
   max-width: 1050px;
   margin: 0 auto;
   }
-.buttons {
+/*.buttons {
   display: inline;
   margin: 0 auto;
-  max-width: 200px
+  max-width: 1000px
   }
 .mybutton {
   display: table;
@@ -53,7 +53,7 @@ p {
   font-family: Courier;
   padding: 0px 10px 0px 10px;
   }
-.carousel-inner {
+*/.carousel-inner {
   margin: 0 auto;
   max-height: 250px;
   max-width: 1050px;
